Adding aliases to access file paths more quickly, finalizing the template

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,17 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@containers/*": ["./src/containers/*"],
+      "@config/*": ["./src/core/config/*"],
+      "@slices/*": ["./src/core/slices/*"],
+      "@views/*": ["./src/views/*"]
+    }
   },
   "include": ["src"]
 }
