Adding alias to assets folder and finalizing artist data block and song suggestion form

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,7 @@
     "baseUrl": ".",
     "paths": {
       "@app/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
       "@containers/*": ["./src/containers/*"],
       "@config/*": ["./src/core/config/*"],
